--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,12 @@ anyio==3.6.1
 click==8.1.3
 fastapi==0.83.0
 Flask==2.2.2
-h11==0.13.0
 idna==3.3
-IndoorClimateAPI==1.0
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mysql-connector==2.2.9
 pydantic==1.10.2
 sniffio==1.3.0
 starlette==0.19.1
