--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,13 @@ anyio==3.6.2
 APScheduler==3.9.1.post1
 click==8.1.3
 fastapi==0.86.0
+flake8==6.0.0
 h11==0.14.0
 idna==3.4
+mccabe==0.7.0
+pycodestyle==2.10.0
 pydantic==1.10.2
+pyflakes==3.0.1
 python-dotenv==0.21.0
 pytz==2022.6
 pytz-deprecation-shim==0.1.0.post0
